--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "v0.0.1",
   "description": "The SE Club Rooms Backend API",
   "scripts": {
-    "start": "node main"
+    "start": "nodemon main"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
   }
 }
